# rr2opml

./: .gitignore  README.md  pyproject.toml
rr2opml/: cli.py  config.py  db.py  email.py  models.py
tests/: test_rr2opml.py
