[tool.poetry]
name = "rr2opml"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]
readme = "README.md"

[tool.poetry.scripts]
rr2opml = "rr2opml.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
typer = "^0.3.2"
toml = "^0.10.2"
IMAPClient = "^2.2.0"
SQLAlchemy = "^1.4.23"
beautifulsoup4 = "^4.9.3"
opml = { git = "https://github.com/buckley-w-david/opml.git" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
